[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Alximest",email = "alximest@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
